--- a/.github/workflows/merge_update.yml
+++ b/.github/workflows/merge_update.yml
@@ -12,6 +12,8 @@ jobs:
       contents: write
     steps:
       - uses: actions/checkout@v3
+        with:
+          lfs: true
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
