--- a/.github/workflows/merge_update.yml
+++ b/.github/workflows/merge_update.yml
@@ -35,4 +35,15 @@ jobs:
           git config --global user.name 'GitHub Action'
           git config --global user.email 'action@github.com'
           git add docs/leaderboard_data.json
-          git diff --staged --quiet || (git commit -m "Auto-update leaderboard" && git push)
+          
+          # Check if there are changes to commit
+          if git diff --staged --quiet; then
+            echo "No changes to leaderboard. Skipping push."
+          else
+            git commit -m "Auto-update leaderboard"
+            
+            # PULL BEFORE PUSH: Fixes the race condition if two merges happen at once
+            git pull --rebase origin main
+            
+            git push
+          fi
